--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@
       var buildUrl = "Build";
       var loaderUrl = buildUrl + "/Rouge.loader.js";
       var config = {
-        dataUrl: buildUrl + "/Rouge.data.br",
-        frameworkUrl: buildUrl + "/Rouge.framework.js.br",
-        codeUrl: buildUrl + "/Rouge.wasm.br",
+        dataUrl: buildUrl + "/Rouge.data",
+        frameworkUrl: buildUrl + "/Rouge.framework.js",
+        codeUrl: buildUrl + "/Rouge.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "CardRouge",
