--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>Unity WebGL Player | CardRouge</title>
+    <title>Unity WebGL Player | CasualGames</title>
     <link rel="shortcut icon" href="TemplateData/favicon.ico">
     <link rel="stylesheet" href="TemplateData/style.css">
   </head>
   <body>
     <div id="unity-container" class="unity-desktop">
-      <canvas id="unity-canvas" width=1920 height=1080></canvas>
+      <canvas id="unity-canvas" width=405 height=720></canvas>
       <div id="unity-loading-bar">
         <div id="unity-logo"></div>
         <div id="unity-progress-bar-empty">
@@ -20,7 +20,7 @@
       <div id="unity-footer">
         <div id="unity-webgl-logo"></div>
         <div id="unity-fullscreen-button"></div>
-        <div id="unity-build-title">CardRouge</div>
+        <div id="unity-build-title">CasualGames</div>
       </div>
     </div>
     <script>
@@ -56,15 +56,15 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/Rouge.loader.js";
+      var loaderUrl = buildUrl + "/Game.loader.js";
       var config = {
-        dataUrl: buildUrl + "/Rouge.data",
-        frameworkUrl: buildUrl + "/Rouge.framework.js",
-        codeUrl: buildUrl + "/Rouge.wasm",
+        dataUrl: buildUrl + "/Game.data",
+        frameworkUrl: buildUrl + "/Game.framework.js",
+        codeUrl: buildUrl + "/Game.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
-        productName: "CardRouge",
-        productVersion: "0.1",
+        productName: "CasualGames",
+        productVersion: "1.0",
         showBanner: unityShowBanner,
       };
 
@@ -93,8 +93,8 @@
       } else {
         // Desktop style: Render the game canvas in a window that can be maximized to fullscreen:
 
-        canvas.style.width = "1920px";
-        canvas.style.height = "1080px";
+        canvas.style.width = "405px";
+        canvas.style.height = "720px";
       }
 
       loadingBar.style.display = "block";
